<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context="MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/qual_o_valor_em_real"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edit_real"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="numberSigned"
        android:textAlignment="center"
        android:textColor="#8BC34A"
        android:textColorHighlight="#8BC34A"
        android:textColorLink="#8BC34A"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/valor_em_dolar"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/text_dollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:padding="10dp"
        android:text="@string/dolar"
        android:textColor="#8BC34A"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/valor_em_euro"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/text_euro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/euro"
        android:textColor="#8BC34A"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/calcular"
        android:textColor="#FDC5C5" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/limpar"
        app:backgroundTint="#555151" />

</LinearLayout>